--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "start": "node dist/app.js",
-    "dev": "tsc -w & nodemon dist/app.js"
+    "dev": "tsc -w & nodemon dist/app.js",
+    "worker": "node ./dist/workers/send_email_worker.js"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "tests/**/**.ts"
+    ],
+    "exclude": [
+    ]
   },
   "author": "",
   "license": "ISC",
