add redis password

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ MAILGUN_DOMAIN='sandbox891acaa02894429091474cd1d9d3a176.mailgun.org'
 EMAIL_FROM='kevinalfianto@gmail.com'
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+REDIS_PASSWORD=
 PORT=3000
