update package json

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "include": [
       "tests/**/**.ts"
     ],
-    "exclude": [
-    ]
+    "exclude": []
   },
   "author": "",
   "license": "ISC",
