change sample env

--- a/env.sample
+++ b/env.sample
@@ -1,7 +1,7 @@
-RABBIT_MQ_HOST=127.0.0.1
-MAILGUN_API_KEY='4d5db45132c8a2ca31556e1a8d83f37f-afab6073-36a7e20b'
-MAILGUN_DOMAIN='sandbox891acaa02894429091474cd1d9d3a176.mailgun.org'
-EMAIL_FROM='kevinalfianto@gmail.com'
+RABBIT_MQ_HOST=
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
+EMAIL_FROM=
 REDIS_HOST='127.0.0.1'
 REDIS_PORT=6379
 REDIS_PASSWORD=
